--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-dev-server": "^3.10.1"
   }
 }
