--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "eslint": "^6.8.0",
     "eslint-config-alloy": "^3.5.0",
     "eslint-plugin-react": "^7.18.0",
+    "rollup-plugin-visualizer": "^3.3.1",
     "typescript": "^3.7.5"
   },
   "dependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@rollup/plugin-commonjs": "^11.0.1",
+    "react": "^16.12.0",
+    "react-reconciler": "^0.24.0",
     "rollup": "^1.30.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.25.3"
+    "rollup-plugin-typescript2": "^0.25.3",
+    "spritejs": "^2.29.9"
   }
 }
