--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react2canvas",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
     "build:watch": "rollup -c -w"
@@ -30,13 +30,15 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@rollup/plugin-commonjs": "^11.0.1",
+    "r2c-spritejs": "^0.1.1",
     "react": "^16.12.0",
     "react-reconciler": "^0.24.0",
+    "react-three-fiber": "^4.0.14",
     "rollup": "^1.30.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
-    "spritejs": "^2.29.9"
+    "three": "^0.113.2"
   }
 }
