--- a/example/pc/package.json
+++ b/example/pc/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "autoprefixer": "^9.7.4",
     "css-loader": "^3.4.2",
+    "hilojs": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "minireset.css": "0.0.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react2canvas": "^0.1.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
