--- a/example/pc/package.json
+++ b/example/pc/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react2canvas": "^0.1.0",
     "sass-loader": "^8.0.2",
+    "stats.js": "^0.17.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
